--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Manual de usuario</a>
+            <a class="nav-link" aria-current="page" href="https://drive.google.com/drive/folders/1B5L_4eoyh4GH4wsJXXcu6J3-xYx2aRfm?usp=share_link">Manual de usuario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Guía para inscripción en el MTC</a>
+            <a class="nav-link" href="https://drive.google.com/drive/folders/1B5L_4eoyh4GH4wsJXXcu6J3-xYx2aRfm?usp=share_link">Guía para inscripción en el MTC</a>
           </li>
          
         </ul>
