--- a/index.html
+++ b/index.html
@@ -83,8 +83,11 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <a class="text-muted">Manual de usuario</a> |
-            <a class="text-muted">Guía para inscripción en el MTC</a>
+        
+            <a class="nav-link" aria-current="page" target="_blank" href="https://drive.google.com/drive/folders/1B5L_4eoyh4GH4wsJXXcu6J3-xYx2aRfm?usp=share_link">Manual de usuario</a>
+         |
+            <a class="nav-link" target="_blank" href="https://drive.google.com/drive/folders/1B5L_4eoyh4GH4wsJXXcu6J3-xYx2aRfm?usp=share_link">Guía para inscripción en el MTC</a>
+          
         </div>
     </footer>
 
